# nfc_lock

./: .gitignore  README.md
hw/: TODO.md  TODO.txt  nfc_lock.brd  nfc_lock.sch
hw/lbr/: irfml8244trpbf.lbr  m24sr16-ymn6t_2.lbr
misc/: matrix-m24sr_gerber_bottom.brd  matrix-m24sr_gerber_top.brd
src/PoC/stm8/: blink.c  build_and_flash
src/android/app/: build.gradle
src/android/app/src/androidTest/java/com/example/piotr/nfctestapp/: ExampleInstrumentedTest.kt
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/java/com/example/piotr/nfctestapp/: MainActivity.kt
src/android/app/src/main/res/layout/: activity_main.xml
src/android/app/src/main/res/values/: strings.xml
src/android/app/src/test/java/com/example/piotr/nfctestapp/: ExampleUnitTest.kt
src/android/gradle/wrapper/: gradle-wrapper.properties
src/stm8/: CMakeLists.txt
src/stm8/Stm8sStdPeriph/: CMakeLists.txt
src/stm8/cmake/: config.cmake  toolchain.cmake
src/stm8/example_beep/: CMakeLists.txt
src/stm8/example_gpio/: CMakeLists.txt  README.md  main.c  st  stm8s_it.c  stm8s_it.h
src/stm8/st/: README.md
src/stm8/stm8s_common/: CMakeLists.txt
